tests/errors/test_74.x
// May only perform tuple access on tuples

fn main() -> void {

	let y: i32 = 21;

	let z = y.0;

}
